# circuitpython-autocompletion

./: .gitignore  Pipfile  pyproject.toml
circuit_python/: __init__.py  board.py
